--- a/Videoteka.UI/appsettings.Development.json
+++ b/Videoteka.UI/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=VideotekaDB;Persist Security Info=True;User ID=sa;Password=Ararat73"
   }
 }
